Generics_Super_Extend_WildCard_CaptureConversion/Code1_error_report.txt
javac errors for Code1.java 
Code1.java:14: error: incompatible types: Code1<FilterInputStream> cannot be converted to Code1<? super InputStream>
        Code1<? super InputStream> ce = new Code1<FilterInputStream>();
                                        ^
1 error
 
============================================================================= 
ExtendJ errors for Code1.java 
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Super_Extend_WildCard_CaptureConversion\Code1.java:14: error: cannot assign variable ce of type Code1<? super InputStream> a value of type Code1<java.io.FilterInputStream>
 
============================================================================= 
Eclipse ECJ errors for Code1.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Super_Extend_WildCard_CaptureConversion\Code1.java (at line 14)
	Code1<? super InputStream> ce = new Code1<FilterInputStream>();
	                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type mismatch: cannot convert from Code1<FilterInputStream> to Code1<? super InputStream>
----------
1 problem (1 error)
